--- a/src/app/list/lists.component.html
+++ b/src/app/list/lists.component.html
@@ -1,35 +1,16 @@
-<!--
-The template defines the view of the component - what is actually rendered.
-In NativeScript applications the template is defined with XML using NativeScript UI elements.
-It is different from HTML. So instead of <input>, <span>, <div> etc. - we have <TextField>, <Label> and layouts.
-The important thing is that although the elements are different - all of the Angular’s template syntax works exactly the same.
-So you can still use template expressions, bindings, templates as well as all the built-in directives.
--->
-
-<!--
-The ActionBar is the NativeScript common abstraction over the Android ActionBar and iOS NavigationBar.
-http://docs.nativescript.org/ui/action-bar
--->
-<ActionBar title="Lists" class="action-bar">
-    <Label text="Lists"></Label>
-    <Button (tap)="chooseFaction()" text="+"></Button>
+<ActionBar title="Lists" class="fa">
+    <ActionItem (tap)="chooseFaction()">
+        <Button text="&#xf067;" class="fa"></Button>
+    </ActionItem>
 </ActionBar>
-
-<!--
-The GridLayout arranges its child elements in a table structure of rows and columns.
-A cell can contain multiple child elements, they can span over multiple rows and columns,
-and even overlap each other. The GridLayout has one column and one row by default.
-You can learn more about NativeScript layouts at https://docs.nativescript.org/ui/layout-containers.
-
-These components make use of several CSS class names that are part of the NativeScript
-core theme, such as p-20, btn, h2, and list-group. You can view a full list of the
-class names available for styling your app at https://docs.nativescript.org/ui/theme.
--->
-<GridLayout class="page">
+<StackLayout>
     <ListView [items]="lists" class="list-group">
         <ng-template let-list="item">
-            <Label [nsRouterLink]="['/list', list.id]" [text]="list.name"
-                class="list-group-list"></Label>
+            <FlexboxLayout [nsRouterLink]="['/list', list.id]">
+                <Image [src]="list.faction.imageUrl" height="20" class="legion-list-faction"></Image>
+                <Label [text]="list.name" class="legion-list-name"></Label>
+                <Label [text]="list.points() + 'pts'" class="legion-list-points"></Label>
+            </FlexboxLayout>
         </ng-template>
     </ListView>
-</GridLayout>
+</StackLayout>
