--- a/src/app/list/list-details/list-detail.component.html
+++ b/src/app/list/list-details/list-detail.component.html
@@ -2,10 +2,10 @@
     <ActionItem (tap)="cancelChanges()">
         <Button text="&#xf060;" class="fa"></Button>
     </ActionItem>
-    <ActionItem (tap)="saveChanges()">
+    <ActionItem (tap)="saveChanges(list.name)">
         <Button text="&#xf0c7;" class="fa"></Button>
     </ActionItem>
 </ActionBar>
 <StackLayout>
-    <TextField [text]="list.name"></TextField>
+    <TextField [(ngModel)]="list.name" *ngIf="list"></TextField>
 </StackLayout>
