--- a/src/app/list/lists.component.html
+++ b/src/app/list/lists.component.html
@@ -4,13 +4,15 @@
     </ActionItem>
 </ActionBar>
 <StackLayout>
-    <ListView height="150" [items]="lists" class="list-group">
+    <ListView [items]="lists" class="list-group" height="100%">
         <ng-template let-list="item" let-i="index">
-            <FlexboxLayout [nsRouterLink]="['/list', i]">
-                <Image [src]="list.faction.imageUrl" height="20" class="legion-list-faction"></Image>
-                <Label [text]="list.name" class="legion-list-name"></Label>
+            <StackLayout [nsRouterLink]="['/list', i]" class="legion-list-row" orientation="horizontal">
+                <StackLayout class="legion-list-name-faction" orientation="horizontal">
+                    <Image [src]="list.faction.imageUrl" height="30" class="legion-list-faction"></Image>
+                    <Label [text]="list.name" class="legion-list-name"></Label>
+                </StackLayout>
                 <Label [text]="getPointsForList(list) + 'pts'" class="legion-list-points"></Label>
-            </FlexboxLayout>
+            </StackLayout>
         </ng-template>
     </ListView>
 </StackLayout>
