--- a/src/app/components/upgrade-type-modal/upgrade_type.modal.html
+++ b/src/app/components/upgrade-type-modal/upgrade_type.modal.html
@@ -2,7 +2,7 @@
     <ListView [items]="upgradeTypes" class="list-group">
         <ng-template let-upgradeType="item">
             <StackLayout class="list-group-item" (tap)="chooseUpgradeType(upgradeType.id)" orientation="horizontal">
-                <Image [src]="upgradeType.imageUrl"></Image>
+                <Image [src]="upgradeType.imageUrl" class="upgrade-symbol"></Image>
                 <Label [text]="upgradeType.name" class="label"></Label>
             </StackLayout>
         </ng-template>
