--- a/src/app/components/list-details/list-detail.component.css
+++ b/src/app/components/list-details/list-detail.component.css
@@ -7,15 +7,30 @@
   margin: 5;
 }
 
+.legion-list-faction {
+  width: 30;
+  margin: 5;
+}
 .legion-list-name {
-  width: 80%
+  color: #999;
+  font-size:16;
+}
+
+.legion-list-name-faction {
+  width: 75%;
+}
+
+.legion-list-name:focus {
+  border-color: #999;
 }
 
 .legion-list-points {
+  margin-top:3;
   text-align: right;
-  width: 20%;
+  width: 25%;
   padding-right: 5;
-  font-size:20;
+  font-size:12;
   padding-top:5;
+  color: #999;
 }
 
