--- a/src/app/components/upgrade-type-modal/upgrade_type.modal.html
+++ b/src/app/components/upgrade-type-modal/upgrade_type.modal.html
@@ -1,7 +1,7 @@
 <GridLayout>
     <ListView [items]="upgradeTypes" class="list-group">
         <ng-template let-upgradeType="item">
-            <StackLayout class="list-group-item" (tap)="chooseUpgradeType(upgradeType.id)" orientation="horizontal">
+            <StackLayout class="list-group-item" (tap)="chooseUpgradeType(upgradeType)" orientation="horizontal">
                 <Image [src]="upgradeType.imageUrl" class="choice-symbol"></Image>
                 <Label [text]="upgradeType.name" class="label choice-name title"></Label>
             </StackLayout>
