--- a/src/app/components/list/lists.component.html
+++ b/src/app/components/list/lists.component.html
@@ -9,7 +9,7 @@
 <StackLayout>
     <ListView [items]="lists" class="list-group" height="100%">
         <ng-template let-list="item" let-i="index">
-            <StackLayout [nsRouterLink]="['/list', i]" class="legion-list-row" orientation="horizontal">
+            <StackLayout (longPress)="listOptions(i)" [nsRouterLink]="['/list', i]" class="legion-list-row" orientation="horizontal">
                 <StackLayout class="legion-list-name-faction" orientation="horizontal">
                     <Image [src]="list.faction.imageUrl" class="legion-list-faction"></Image>
                     <Label [text]="list.name" class="legion-list-name title"></Label>
