--- a/src/app/components/list/lists.component.css
+++ b/src/app/components/list/lists.component.css
@@ -1,6 +1,11 @@
 .legion-list-row {
-  padding: 5;
   width: 100%;
+  padding: 10;
+}
+
+StackLayout {
+  margin: 0;
+  padding: 0;
 }
 
 .legion-list-faction {
@@ -11,7 +16,6 @@
   margin-top: 10;
   text-align: right;
   width: 25%;
-  padding-right: 5;
   font-size:12;
   color:#999;
 }
@@ -27,3 +31,8 @@
   color:#999;
 }
 
+.legion-list-units {
+  color:#666;
+  font-size:10;
+  margin-left:40;
+}
